Placate exception check verification after recent changes. https://bugs.webkit.org/show_bug.cgi?id=187961 <rdar://problem/42545394>

Reviewed by Saam Barati.

* runtime/IntlObject.cpp:
(JSC::intlNumberOption):


Canonical link: https://commits.webkit.org/203137@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234160 268f45cc-cd09-0410-ab3c-d52691b4dbfc