Source/JavaScriptCore/runtime/IntlObject.cpp
@@ -202,6 +202,7 @@ unsigned intlNumberOption(ExecState& state, JSValue options, PropertyName proper
     JSValue value = opts->get(&state, property);
     RETURN_IF_EXCEPTION(scope, 0);
 
+    scope.release();
     return intlDefaultNumberOption(state, value, property, minimum, maximum, fallback);
 }
 
